--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ body{
     font-family: 'Titillium Web', sans-serif;
 }
 
+header{
+    margin-top: 75px;
+}
+
 #testimonial {
     background-color: #f1f1f1;
     padding: 50px 0 30px 0;
